--- a/css/homepage.css
+++ b/css/homepage.css
@@ -7,7 +7,8 @@
   width: 600px;
   width: calc(100vw / 4);
   float: right;
-  margin-top: -30px;
+  margin-top: -230px;
+  padding-top: 200px;
 }
 .featured {
   background: rgb(0,0,0);
