--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,7 @@
+header.navbar { /*temporal fix*/
+  height: 50px;
+  overflow: hidden;
+}
 .agenda {
   background-color: black;
   color: white;
@@ -7,8 +11,9 @@
   width: 600px;
   width: calc(100vw / 4);
   float: right;
-  margin-top: -230px;
-  padding-top: 200px;
+  margin-top: -30px;
+  padding-top: 0px;
+  padding-bottom: 205px;
 }
 .featured {
   background: rgb(0,0,0);
