--- a/css/homepage.css
+++ b/css/homepage.css
@@ -38,6 +38,11 @@
     background-repeat: repeat-x, repeat;
     background-position: top left, bottom left;
 }
+.embedded-video {
+  width: 100%;
+  height: 900px;
+  border: none;
+}
 .enduro-brand {
   display: block;
   position: absolute;
