--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 /* @import '../css/parallax.css';*/
 @import '../css/homepage.css';
-
+body {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
+  background-color: #e6e6e6;
+}
 .main-content {
   padding-top: 96px;
-  padding-bottom: 500px;
 }
 .wrapper {
   max-width: 2880px;
@@ -11,7 +14,6 @@
   margin: 0 auto;
 }
 h1,h2,h3,h4,h5 {
-  font-family: 'Oswald', sans-serif;
   font-weight: lighter;
 }
 a {
@@ -120,7 +122,7 @@ header.navbar .navbar-header *{
   color: white;
   text-shadow: 0px 2px 4px #0098db;
 }
-header.navbar .nav>li>a.special-link {
+header.navbar .nav>li a.special-link {
   color: #f3e600;
 }
 header.navbar .nav>li>a.special-link img {
@@ -156,12 +158,38 @@ header .open>.dropdown-menu:after {
   z-index:-1;
   box-shadow: 0 12px 40px rgba(0,0,0,.5);
 }
+header .open>.dropdown-menu.downloads:after {
+  height: 130px;
+}
+header .nav .dropdown-menu > ul {
+  list-style: none;
+  padding-left: 0;
+  min-width: 300px;
+  font-size: 30px;
+  color: #fff200;
+}
+header .nav .dropdown-menu > ul li {
+  display: block;
+}
 header .nav .dropdown-menu .agenda{
   height: auto;
   padding: 0;
 }
 header .agenda li, header .agenda li h3 {
   color: #6dcff6;
+}
+header .dropdown-menu.eventos {
+  width: 100vw;
+  left: inherit;
+  right: 0;
+  text-align: center;
+  margin-top: 50px;
+}
+header .dropdown-menu.eventos img{
+  max-width: 100%;
+  max-height: 160px;
+  display: block;
+  margin: 0 auto;
 }
 .agenda {
   display: block;
@@ -263,14 +291,18 @@ header .agenda li, header .agenda li h3 {
 .agenda li.active p a {
   display: block;
 }
-
+.footer-proximity {
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+  z-index: 1000;
+}
 .section-footer {
   height: 500px;
   width: 100%;
   background: black;
-  position: fixed;
-  bottom: -415px;
-  z-index: 100;
 }
 .section-footer .brand {
   max-height: 64px;
@@ -328,4 +360,129 @@ header .agenda li, header .agenda li h3 {
     height: 150px;
     width: auto;
   }
+}
+.article {
+  line-height: 30px;
+  font-size: 18px;
+  padding-top: 20px;
+}
+.article p {
+  margin-bottom: 30px;
+}
+.article h3 {
+  line-height: 36px;
+  margin-bottom: 40px;
+}
+.article strong, .article b {
+  font-weight: 400;
+}
+.share-content {
+  color: #00adee;
+  margin: 30px 0;
+}
+.share-content a.fa{
+  background: #00adee;
+  color: white;
+  padding: 5px 10px;
+}
+.inline-brand {
+  display: inline-block;
+  max-height: 40px;
+}
+.title-horiz-bar {
+  padding: 25px 5px;
+  background-color: rgba(200,200,200,.7);
+  color: #fff200;
+  text-transform: uppercase;
+  font-size: 40px;
+  text-shadow: 1px 1px 2px rgba(0,0,0,.2);
+}
+.title-horiz-bar .highlight {
+  color: #00adee;
+  text-shadow: 1px 1px 2px rgba(255,255,255,.2);
+}
+.nav-tabs.link-tabs {
+  border-color: transparent;
+  margin: 20px 0;
+}
+.nav-tabs.link-tabs>li>a {
+  color: #000;
+  text-transform: none;
+  font-weight: 300;
+  padding: 10px 0;
+  text-decoration: underline;
+}
+.nav-tabs.link-tabs>li>a:after {
+  display: inline-block;
+  content: "\00a0|";
+  text-decoration: none;
+}
+.nav-tabs.link-tabs>li:last-child>a:after {
+  content: "";
+}
+.nav-tabs.link-tabs>li>a:hover {
+  border-color: transparent;
+  text-decoration: underline;
+  color: #555;
+  background-color: transparent;
+}
+.nav-tabs.link-tabs>li.active>a, .nav-tabs.link-tabs>li.active>a:focus, .nav-tabs.link-tabs>li.active>a:hover {
+  text-decoration: underline;
+  border-color: transparent;
+  font-weight: 400;
+}
+.table-squared {
+  font-size: 22px;
+  color: #333;
+}
+.table-squared thead {
+  background-color: #fff200;
+}
+.table-squared tbody {
+  background-color: #d1d1d1;
+}
+.table-squared tbody tr:nth-child(even) {
+  background-color: #c8c8c8;
+}
+.table-squared td:nth-child(even), .table-squared th:nth-child(even) {
+  background-color: rgba(255,255,255,.4);
+}
+.table-squared td, .table-squared th {
+  text-shadow: 1px 1px 2px rgba(255,255,255,.4);
+}
+.table-squared th, .table-squared td {
+  text-align: center;
+  font-weight: 300;
+}
+.table-squared th:first-child, .table-squared td:first-child {
+  text-align: left;
+}
+.table-squared>thead>tr>th, .table-squared tbody tr td {
+  border-bottom: 4px solid #e6e6e6;
+  vertical-align: middle;
+}
+.table-clasif th {
+  color: #005fae;
+  font-size: 20px;
+}
+.table-clasif th:first-child{
+  font-size: 40px;
+  color: #333;
+}
+.table-clasif td:first-child strong{
+  font-size: 35px;
+  font-weight: 400;
+  display: inline-block;
+  width: 60px;
+  text-align: center;
+  vertical-align: middle;
+}
+.table-clasif thead small {
+  display: block;
+  font-size: 16px;
+  line-height: 15px;
+}
+.table-clasif tbody em{
+  font-style: normal;
+  font-size: 16px;
 }
