Adding section missing for inner pages

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -311,6 +311,8 @@
 }
 .section-gallery .tab-pane .tab-pane img {
   max-width: 100%;
+  display: block;
+  margin: 0 auto;
 }
 .embedded-video {
   width: 100%;
